--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "@types/uuid": "^9.0.6",
     "antd": "4.21.0",
     "class-css": "^1.0.24",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
