--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "ahooks": "^3.7.8",
     "antd": "4.21.0",
     "class-css": "^1.0.24",
     "classnames": "^2.3.2",
