--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "antd": "4.21.0",
     "class-css": "^1.0.24",
     "classnames": "^2.3.2",
+    "jsoneditor": "^9.10.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jsoneditor": "^9.9.2",
     "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
