--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@types/axios": "^0.14.0",
     "ahooks": "^3.7.8",
     "antd": "4.24.0",
+    "axios": "^1.6.2",
     "class-css": "^1.0.24",
     "classnames": "^2.3.2",
     "jsoneditor": "^9.10.3",
