fix(.): fix build warn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": [
+    "./dist"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
