--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write .",
-      "eslint */* --fix"
+      "eslint src/* --fix"
     ]
   },
   "dependencies": {
