--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "cross-env mode=development vite --host=0.0.0.0",
-    "build": "tsc && vite build",
+    "build": "tsc && cross-env mode=development vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "preinstall": "husky install",
