--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@ name: build website
 
 on:
   push:
-    branches: [ "release" ]
+    branches: ['release']
   pull_request:
-    branches: [ "release" ]
+    branches: ['release']
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
       - name: setup node@16.20.1
         uses: actions/setup-node@v4
         with:
-          node-version: "16.20.1"
+          node-version: '16.20.1'
 
       - name: Install pnpm@7.30.5
         uses: pnpm/action-setup@v4
